# Re-Chord_PJT

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/app/: __init__.py  cli.py  config.py  main.py
backend/app/api/: billing.py  chat.py  consents.py  feedback.py  formats.py  jobs.py  legal.py  notes.py  performance.py  setlists.py  uploads.py
backend/app/auth/: __init__.py  auth.py  billing.py
backend/app/chat/: __init__.py  attachments.py  korean_translation.py  lyrics_crosscheck.py  music_db.py  openai_client.py  prompts.py  ratelimit.py  schemas.py  sessions.py  tools.py  web_search.py  youtube_lyrics.py
backend/app/core/: events.py  jobs.py  observability.py  ops.py  paths.py  queue.py  ratelimit.py
backend/app/db/: __init__.py  alembic.ini  models.py  repository.py  session.py
backend/app/pipeline/: __init__.py  _numpy_compat.py  analyze.py  autotune.py  aux_classifier.py  aux_cues.py  backend_report.py  chord_bass_check.py  chord_crema.py  chord_llm.py  chord_tension.py  chord_theory.py  chords.py  click.py  decode.py  encode.py  ensemble.py  eq_match.py  ingest.py  local_llm.py  loop.py  lyrics.py  lyrics_align.py  mastering.py  mixdown.py  polish.py  quality.py  score.py  sections.py  sections_advanced.py  separate.py  spatial.py  transcribe.py  transform.py  transform_world.py  voice_cue.py  worship.py
backend/app/storage/: __init__.py  base.py  local.py  s3.py
backend/app/workers/: celery_app.py  orchestrator.py  retention.py
backend/data/models/: config_mel_band_roformer_kim_ft_unwa.yaml  download_checks.json  mel_band_roformer_karaoke_aufr33_viperx_sdr_10.1956_config.yaml
backend/data/seed/: hymns.json  music_songs.json  music_songs.youtube_enrichment.json
backend/scripts/: retrofit_tags.py
backend/tests/: smoke_api.py  smoke_full.py  smoke_loop.py  smoke_monitor.py  smoke_score.py  smoke_verify.py
deploy/: backend.Dockerfile  disable-autologon.ps1  enable-autologon.ps1  entrypoint.sh  frontend.Dockerfile  install-services.ps1  nginx.conf  run-backend.ps1  run-tunnel.ps1  uninstall-services.ps1
docs/: deploy_runbook.md  deployment.md  phase_b_migration.md  sota-models.md
docs/legal/: consent_ui_spec.md  copyright_notice.md  privacy_policy.md  terms_of_service.md
docs/operations/: backup_disaster_recovery.md  db_setup.md  monitoring.md  secrets_management.md
frontend/: MOBILE.md  capacitor.config.json  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vercel.json  vite.config.js
frontend/e2e/: a11y.spec.js  fde_live.spec.js  golden_path.spec.js  job_lifecycle.spec.js  screens_verify.spec.js
frontend/public/: manifest.webmanifest  robots.txt  sw.js
frontend/scripts/: generate-og-png.mjs
frontend/src/: App.jsx  i18n.js  index.css  main.jsx
frontend/src/components/: ABCompare.jsx  AccuracyGuide.jsx  AdvancedExportPanel.jsx  AppShell.jsx  AuthMenu.jsx  AutotunePanel.jsx  AuxCuesEditor.jsx  BackendSummaryPanel.jsx  ChordsPanel.jsx  ErrorBoundary.jsx  ErrorCard.jsx  FeedbackPanel.jsx  FormatPicker.jsx  ImpactCard.jsx  JobLibrary.jsx  KeyControl.jsx  KeyControl.test.jsx  LangSwitcher.jsx  LyricsEditor.jsx  MasteringPanel.jsx  ModeSelector.jsx  MonitorPanel.jsx  NotesEditor.jsx  OnboardingTour.jsx  PracticePanel.jsx  ProgressPanel.jsx  QualityPanel.jsx  RecordingPanel.jsx  ResultPanel.jsx  ScorePanel.jsx  ScorePlayback.jsx  SectionsTimeline.jsx  SetlistWarnings.jsx  SetlistWarnings.test.jsx  ShareDialog.jsx  ShortcutsHelp.jsx  StemsMixer.jsx  TempoControl.jsx  Uploader.jsx  UrlInput.jsx  (+2 more)
frontend/src/i18n/: en.json  ko.json
frontend/src/lib/: api.js  api.test.js  chatActions.js  chatActions.test.js  platform.js  roles.js  setlistAnalyzer.js  setlistAnalyzer.test.js  supabase.js  toast.js  transpose.js  transpose.test.js  usage.js  usage.test.js  useAuth.js  useAutosave.js  useEta.js  useJobHistory.js  useKeyboardShortcuts.js  useMediaQuery.js  useMidiInput.js  usePerformanceSync.js  useTheme.js  useUndoStack.js  useVoiceControl.js  utils.js
frontend/src/pages/: AuthCallback.jsx  Home.jsx  (+6 more)
scripts/: README.md  autofill_ground_truth.py  backup_postgres.ps1  backup_postgres.sh  build_aux_reference_db.py  build_kpop_section_dataset.py  build_synth_4stem_corpus.py  doctor.py  e2e_real_run.py  enrich_translations_via_youtube.py  fetch_research_datasets.py  fetch_sota_separator.py  install_models.py  install_sota.ps1  live_deploy_smoke.py  measure_accuracy.py  measure_autotune_accuracy.py  measure_aux_accuracy.py  measure_chord_accuracy.py  measure_drums_f1.py  measure_lyrics_align_iou.py  measure_real_accuracy.py  measure_real_accuracy_v4.py  measure_sdr_musdb.py  measure_section_accuracy.py  measure_slash_chord_accuracy.py  measure_tension_detection.py  measure_transcribe_f1.py  measure_transform_accuracy.py  probe_real_tension_aux.py  probe_separator_hub.py  remeasure_separation.py  run_accuracy_suite.py  setup_postgres.ps1  setup_postgres.sh  verify_session.py
scripts/sources/: __init__.py  _common.py  fetch_arachno.py  fetch_arachno_aug.py  fetch_nsynth.py  render_sf2.py
tests/: test_accuracy_thresholds.py  test_analyze_unit.py  test_aux_reliability.py  test_baseline_measurements.py  test_celery_dryrun.py  test_chat_confidence.py  test_chat_job_context.py  test_consents_api.py  test_e2e_pipeline.py  test_error_paths.py  test_feedback_api.py  test_job_persistence.py  test_lyrics_align_skip.py  test_lyrics_korean_fixes.py  test_mastering_lufs.py  test_pipeline_integration.py  test_pro_mode_helpers.py  test_score_drums.py  test_score_dynamics_articulation.py  test_score_export_completeness.py  test_score_leadsheet.py  test_score_render_e2e.py  test_score_satb.py  test_score_tab.py  test_score_timemap.py  test_separation_4stem_regression.py  test_separation_regression.py  test_ssrf_and_queue.py  test_stem_overlap.py  test_synth_4stem_smoke.py  test_tempo_referent.py
tests/fixtures/: accuracy_thresholds.json
tests/load/: README.md  k6_smoke.js
(+30 files in other folders)
