[project]
name = "mr-platform"
version = "0.1.0"
description = "AR -> MR conversion platform with Moises-style key/tempo/chord/section analysis"
requires-python = ">=3.11,<3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.20",
    "websockets>=13.1",

    "yt-dlp>=2025.1.15",
    "audio-separator[gpu]>=0.28",

    # CUDA-enabled torch stack for RTX 5070 (Blackwell, sm_120 → cu128).
    # See [tool.uv.sources] below for the pytorch-cu128 index mapping.
    "torch>=2.11",
    "torchaudio>=2.11",
    "torchvision>=0.26",

    "soundfile>=0.12.1",
    "numpy<2.0",
    "scipy>=1.13",
    "librosa>=0.10.2",
    "pyloudnorm>=0.1.1",
    "mutagen>=1.47",

    # Score extraction pipeline (basic_pitch -> music21 -> verovio -> PDF).
    "basic-pitch>=0.4",
    "music21>=9.1",
    "verovio>=4.3",
    "svglib>=1.5",
    "reportlab>=4.0",

    # Lyrics: word-level Korean/English transcription (whisper variant).
    # ``transcribe_lyrics`` imports lazily; pinning here makes ``uv sync``
    # restore the dep so the orchestrator's lyrics stage doesn't silently
    # fall through with "lyrics skipped: No module named 'faster_whisper'".
    "faster-whisper>=1.0",
    # basic_pitch pulls tensorflow; pin <2.16 so it stays on the 2.15.x
    # line whose tensorflow-io-gcs-filesystem 0.31.0 ships a Windows wheel.
    # tf 2.20.x requires io-gcs-filesystem 0.37.x which is Linux/Mac only.
    # On Windows, `tensorflow` is a stub that depends on `tensorflow-intel`
    # for the actual code; uv 0.11 doesn't always resolve that transitive
    # dep, so we pin it explicitly for win32.
    "tensorflow>=2.15,<2.16",
    "tensorflow-intel>=2.15,<2.16; sys_platform == 'win32'",

    "python-magic-bin; sys_platform == 'win32'",
    "rich>=13.9",
    "structlog>=24.4",
    "typer>=0.12",
]

[project.optional-dependencies]
# madmom/autochord need MSVC Build Tools on Windows and are not used by
# the default pipeline (analyze.py/chords.py/sections.py are librosa-only).
# Install them imperatively if you have MSVC:
#   uv pip install "madmom>=0.16.1" autochord --no-build-isolation
analysis = [
    "allin1>=1.1",
]
aux_classifier = [
    # CLAP audio/text embeddings for AUX patch matching.
    # ~2GB checkpoint downloaded on first use.
    "laion-clap>=1.1.6",
    # SoundFont preset enumeration for build_aux_reference_db.py.
    "sf2utils>=1.0",
    # MIDI generation for SF2 rendering harness.
    "pretty_midi>=0.2.10",
]
saas = [
    # PostgreSQL persistence + Alembic migrations for Phase B.
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # S3-compatible object storage (Cloudflare R2 / AWS S3) — used by
    # storage/s3.py to offload job artifacts off the local disk (free egress).
    "boto3>=1.34",
]
monitoring = [
    # Sentry error tracking + FastAPI / logging integrations.
    # Activates automatically when SENTRY_DSN is set; setup_logging()
    # in core/observability.py wires the FastApi/Logging integrations.
    "sentry-sdk[fastapi]>=2.18",
]
sota_models = [
    # crepe is installed imperatively via scripts/install_sota.ps1 because
    # its 0.0.16 setup.py imports pkg_resources at PEP 517 build time and
    # uv 0.11's universal lockfile can't override that path. See the script
    # for the --no-build-isolation invocation.
    # omnizart is Python-3.10-only — replaced by basic_pitch / transkun.
    # HF Hub model fetching (BS-Roformer mel v2, Apollo, SCNet-Large).
    "huggingface-hub>=0.24",
    # CREMA chord recognizer (170-class vocab incl. 7th/sus/dim/slash).
    # Used by chord_crema.py; merged with template-match output.
    "crema>=0.1.0",
    # WORLD vocoder for large-shift vocal pitch transformation (>5 st).
    "pyworld>=0.3.4",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
mr-doctor = "scripts.doctor:main"
mr = "backend.app.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
package = true

# tensorflow-io-gcs-filesystem 0.32+ ships no Windows wheels. Force the
# resolver to stay on 0.31.0 on win32 regardless of what transitive deps
# request — Linux/Mac envs are unaffected.
#
# ml-dtypes pin: tensorflow 2.15 requires ml-dtypes~=0.2; but onnx>=1.19
# transitively wants ml-dtypes>=0.5 (for float4_e2m1fn). If the resolver
# upgrades ml-dtypes to 0.5 it breaks tensorflow/basic-pitch import. We
# pin <0.5 so tensorflow stays healthy. Consequence: a bare `import onnx`
# fails — which is fine, the separation path uses onnxruntime + PyTorch,
# never the `onnx` package directly (verified 2026-05-27: separation +
# 202 tests pass). protobuf pinned <5 for the same tensorflow constraint.
override-dependencies = [
    "tensorflow-io-gcs-filesystem<0.32; sys_platform == 'win32'",
    "ml-dtypes<0.5",
    "protobuf<5",
]

# Pin torch/torchaudio/torchvision to the official PyTorch cu128 wheels
# so sync doesn't fall back to the CPU-only PyPI build on resolve. The
# index is marked ``explicit`` so it's only consulted for packages with
# a [tool.uv.sources] mapping — everything else stays on PyPI.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

# If you re-enable madmom or crepe in extras above, uncomment these so
# their PEP 517 build environments get the implicit deps they need.
# [tool.uv.extra-build-dependencies]
# madmom = ["Cython", "numpy<2.0", "setuptools"]
# crepe = ["setuptools"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
